jeste v sekce onas

--- a/www/index.html
+++ b/www/index.html
@@ -95,7 +95,7 @@ function smsnr(o, p) {
 	}
 </script>
 <div data-role="page" id="onas" class="onas">
-	<div data-role="header" data-position="fixed">
+	<div data-role="header" data-position="fixed" data-tap-toggle="false">
             <a href="#seznam" data-transition="none" class="seznamBack"><img src="img/ios7-back-icon-blue.png" height="32" /></a>
             <h1><img src="img/insia_about.png"/></h1>
 	</div>
