--- a/www/index.html
+++ b/www/index.html
@@ -11,9 +11,6 @@
 	<script src="js/jquery.mobile-1.4.3.min.js"></script>
     <script type="text/javascript" src="phonegap.js"></script>
     <script type="text/javascript" src="data.js"></script>
-    
-<style>
-</style>
 </head>
 <body>
 
@@ -31,7 +28,6 @@ function zajem() {
 </script>
 
 <div data-role="page" id="hlavni" class="hlavni">
-<input type="button" value="go" onclick="sendSMS()" />
 	<div class="hlavniLogo"><img src="img/pojistovny.png"/></div>
 	<div class="hlavniText"><p>Užitečný adresář pojišťoven<br />
 	pro&nbsp;makléře, agenty a finanční poradce<br />
@@ -128,7 +124,7 @@ function smsnr(i, j) {
 		<a href="http://www.insia.cz/spoluprace" id="onasWeb">www.insia.cz/spoluprace</a><br />
 		<br />
 		<a href="tel:+420739348582" id="onasTel">+ 420 739 348 582</a><br />
-		
+		</p></div>
 		<div class="dataBox">
 		<a href="tel:+420739348582"><img src="img/btn_txt_call.png"></a>
 		<a href="#" onclick="zajem()"><img src="img/btn_txt_sms.png"></a>
